manifests/demodeploy.yaml
#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trader
  labels:
    solution: stock-trader
  annotations: { 
    prism.subkind: Liberty
  }
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: trader
        version: v1
    spec:
      containers:
      - name: trader
#       Note: this manifests/deploy.yaml will be used when we want to deploy this directly using kubectl or a helm chart. 
#             Microclimate uses the Charts folder so we can actually have both options
#        image: ibmstocktrader/trader:basicregistry # Docker Hub with basic registry sign in
        image: bigloon.icp:8500/stock-trader/trader:demo # IBM Cloud Private
        #image: registry.ng.bluemix.net/stock_trader/trader:latest # IBM Container Service
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 60
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: trader-service
  labels:
    app: trader
    solution: stock-trader
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: trader
---
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trader-ingress
  labels:
    solution: stock-trader
  annotations:
    #kubernetes.io/ingress.class: "istio"
    #ingress.kubernetes.io/rewrite-target: /trader
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
    #ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/secure-backends: "true"
    #ingress.kubernetes.io/app-root: "/trader"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /trader
        backend:
          serviceName: trader-service
          servicePort: 9443
