manifests/deploy-openshift.yaml
#       Copyright 2017-2020 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#Deploy the pod
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: trader
  labels:
    app: stock-trader
  annotations:
    prism.subkind: Liberty
spec:
  replicas: 1
  triggers:
    - type: "ConfigChange"
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        containerNames:
          - "trader"
        from:
          kind: "ImageStreamTag"
          name: "trader:latest"
  template:
    metadata:
      labels:
        app: trader
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: trader
#       Note: this manifests/deploy.yaml will be used when we want to deploy this directly using kubectl.
#             Microclimate uses the Charts folder so we can actually have both options
        #image: ibmstocktrader/trader:basicregistry # Docker Hub with basic registry sign in
        image: image-registry.openshift-image-registry.svc:5000/stock-trader/trader:latest # OCP
        #image: mycluster.icp:8500/stock-trader/trader:latest # IBM Cloud Private
        #image: registry.ng.bluemix.net/stock_trader/trader:latest # IBM Kubernetes Service
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9080
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9080
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 5 # Allow a little time to exec into the pod to grab FFDCs before it's killed
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: trader-service
  labels:
    app: trader
    solution: stock-trader
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: trader
---
# Openshift Route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: trader
  labels:
    app: trader
    solution: stock-trader
spec:
  to:
    kind: Service
    name: trader-service
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
